* `UserAgentUtility`: API removed `isRapUi()`, `isSwingUi()`
* `AbstractFormField.set/isStatusVisible` added.
* `org.eclipse.scout.commons` reorganized, classes moved to `org.eclipse.scout.rt.platform` and other projects
* The unused, obsolete classes `org.eclipse.scout.rt.client.ui.form.fields.ValueFieldEvent` and `org.eclipse.scout.rt.client.ui.form.fields.ValueFieldListener` were removed.

== Known Bugs and Limitations

=== Selection in disabled text fields
Firefox (tested with v 35.0.1): it's not possible to select text in a disabled text field. There is no workaround. An often suggested workaround is to use the readonly attribute instead of disabled, but this leads to a completely different behavior when it comes to event handling. When a field is disabled it doesn't fire any events (for instance: click), but when it's set to readonly event handling is still enabled. In other words: we'd have to implement browser/widget default behavior to work around this problem -- additionally the workaround should only affect Firefox but none of the other browsers (where this is not an issue at all).

=== Drag and drop support
IE9 does not support dropping files. Therefore, drag and drop in file chooser is not supported for that browser.

=== Input placeholders
On-field labels are not visible in IE9 because it lacks support for the "placeholder" attribute.

=== HttpServiceTunnel
It is now possible again to call services on a different scout server by specifying server
org.eclipse.scout.rt.servicetunnel.targetUrl and scout.auth.privatekey.
For all interfaces annotated with @TunnelToServer without implementation, a proxy is created.

=== Session Cookie (JSESSIONID Cookie) configuration validation
The HTML UI checks if the application is configured safe by validating some flags set on the session cookie. For more details on how to configure your session cookie please refer to the Scout Documentation chapter "Session Cookie (JSESSIONID Cookie) Configuration".
