@@ -134,6 +134,12 @@ A new widget has been added: `WizardProgressField`. It is normally visualized as
 * `org.eclipse.scout.commons` reorganized, classes moved to `org.eclipse.scout.rt.platform` and other projects
 * The unused, obsolete classes `org.eclipse.scout.rt.client.ui.form.fields.ValueFieldEvent` and `org.eclipse.scout.rt.client.ui.form.fields.ValueFieldListener` were removed.
 
+=== Moved to correct module
+move org.eclipse.scout.rt.server.commons.authentication.ConfigFileCredentialVerifier to org.eclipse.scout.rt.platform.security.ConfigFileCredentialVerifier
+move org.eclipse.scout.rt.server.commons.authentication.ICredentialVerifier to org.eclipse.scout.rt.platform.security.ICredentialVerifier
+move org.eclipse.scout.rt.server.commons.authentication.IPrincipalProducer to org.eclipse.scout.rt.platform.security.IPrincipalProducer
+move org.eclipse.scout.rt.server.commons.authentication.SimplePrincipalProducer to org.eclipse.scout.rt.platform.security.SimplePrincipalProducer
+
 == Known Bugs and Limitations
 
 === Selection in disabled text fields
@@ -155,3 +161,4 @@ The HTML UI checks if the application is configured safe by validating some flag
 
 === UserIdAccessControlService [Removed]
 `org.eclipse.scout.rt.shared.services.common.security.UserIdAccessControlService` was removed in M7. When creating a new Scout project via SDK, an own implementation of AbstractAccessControlService is now explicitly created in shared, named `AccessControlService` (as replacement for the removed `UserIdAccessControlService`). The class generated at the server side now replaces (@Replace) the new one generated in shared (class name of server side changed from `AccessControlService` to `ServerAccessControlService`).
+
